SSCSFT-127 Spike - Create test users programmatically on the fly for FTs