@@ -21,31 +21,29 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Objects;
-import junitparams.JUnitParamsRunner;
+import lombok.Getter;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.awaitility.core.ConditionFactory;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.annotation.ProfileValueSourceConfiguration;
-import org.springframework.test.context.junit4.rules.SpringClassRule;
-import org.springframework.test.context.junit4.rules.SpringMethodRule;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
 import uk.gov.hmcts.reform.sscs.ccd.domain.*;
 import uk.gov.hmcts.reform.sscs.ccd.service.CcdService;
 import uk.gov.hmcts.reform.sscs.ccd.util.CaseDataUtils;
 import uk.gov.hmcts.reform.sscs.domain.pdf.ByteArrayMultipartFile;
+import uk.gov.hmcts.reform.sscs.functional.utilities.idam.LocalIdamService;
 import uk.gov.hmcts.reform.sscs.idam.IdamService;
 import uk.gov.hmcts.reform.sscs.idam.IdamTokens;
 import uk.gov.hmcts.reform.sscs.service.EvidenceManagementSecureDocStoreService;
 
-@RunWith(JUnitParamsRunner.class)
+@ExtendWith(SpringExtension.class)
 @SpringBootTest
 @ProfileValueSourceConfiguration(EnvironmentProfileValueSource.class)
 public abstract class AbstractFunctionalTest {
@@ -56,16 +54,10 @@ public abstract class AbstractFunctionalTest {
     private static final String EXISTING_DOCUMENT_PDF = "existing-document.pdf";
     private static final String EXISTING_DOCUMENT_TYPE = "EXISTING_DOCUMENT";
 
-    // Below rules are needed to use the junitParamsRunner together with SpringRunner
-    @ClassRule
-    public static final SpringClassRule SPRING_CLASS_RULE = new SpringClassRule();
-
-    @Rule
-    public final SpringMethodRule springMethodRule = new SpringMethodRule();
-    //end of rules needed for junitParamsRunner
-
     @Autowired
     private IdamService idamService;
+    @Autowired @Getter
+    private LocalIdamService access;
 
     private IdamTokens idamTokens;
 
@@ -83,8 +75,12 @@ public abstract class AbstractFunctionalTest {
     private final String tcaInstance = System.getenv("TEST_URL");
     private final String localInstance = "http://localhost:8008";
 
-    SscsCaseDetails createNonDigitalCaseWithEvent(EventType eventType) {
-        return createCaseWithState(eventType, "PIP", "Personal Independence Payment", State.VALID_APPEAL.getId());
+    void createNonDigitalCaseWithEvent(EventType eventType) {
+        createCaseWithState(eventType, "PIP", "Personal Independence Payment", State.VALID_APPEAL.getId());
+    }
+
+    void createNonDigitalCaseWithEvent(EventType eventType, Benefit benefit, State state, IdamTokens tokens) {
+        createCaseWithState(eventType, benefit.name(), benefit.getDescription(), state.getId(), tokens);
     }
 
     SscsCaseDetails createDigitalCaseWithEvent(EventType eventType) {
@@ -116,6 +112,29 @@ public abstract class AbstractFunctionalTest {
         return caseDetails;
     }
 
+    SscsCaseDetails createCaseWithState(EventType eventType, String benefitType, String benefitDescription, String createdInGapsFrom, IdamTokens tokens) {
+
+        SscsCaseData minimalCaseData = CaseDataUtils.buildMinimalCaseData();
+
+        SscsCaseData caseData = minimalCaseData.toBuilder()
+            .createdInGapsFrom(createdInGapsFrom)
+            .appeal(minimalCaseData.getAppeal().toBuilder()
+                .benefitType(BenefitType.builder()
+                    .code(benefitType)
+                    .description(benefitDescription)
+                    .build())
+                .receivedVia("Paper")
+                .build())
+            .build();
+
+
+        SscsCaseDetails caseDetails = ccdService.createCase(caseData, eventType.getCcdType(),
+            "Evidence share service created case",
+            "Evidence share service case created for functional test", tokens);
+        ccdCaseId = String.valueOf(caseDetails.getId());
+        return caseDetails;
+    }
+
     void updateCaseEvent(EventType eventType, SscsCaseDetails caseDetails) {
         idamTokens = idamService.getIdamTokens();
 
@@ -135,8 +154,8 @@ public abstract class AbstractFunctionalTest {
         return FileUtils.readFileToString(new File(file), StandardCharsets.UTF_8.name());
     }
 
-    public static String getRandomNino() {
-        return RandomStringUtils.random(9, true, true).toUpperCase();
+    static String getRandomNino() {
+        return RandomStringUtils.secure().next(9, true, true).toUpperCase();
     }
 
     public void simulateCcdCallback(String json) {
@@ -148,7 +167,7 @@ public abstract class AbstractFunctionalTest {
         RestAssured.useRelaxedHTTPSValidation();
         RestAssured
             .given()
-            .header("ServiceAuthorization", "" + idamTokens.getServiceAuthorization())
+            .header("ServiceAuthorization", idamTokens.getServiceAuthorization())
             .contentType("application/json")
             .body(json)
             .when()
@@ -157,15 +176,31 @@ public abstract class AbstractFunctionalTest {
             .statusCode(HttpStatus.OK.value());
     }
 
-    protected String createTestData(String fileName) throws IOException {
-        SscsCaseDetails caseDetails = createDigitalCaseWithEvent(VALID_APPEAL_CREATED);
+    public void simulateCcdCallback(String json, String authorisation) {
 
-        String json = uploadCaseDocuments(fileName, caseDetails);
+        baseURI = StringUtils.isNotBlank(tcaInstance) ? tcaInstance : localInstance;
 
-        return json;
+        final String callbackUrl = baseURI + "/testing-support/send";
+
+        RestAssured.useRelaxedHTTPSValidation();
+        RestAssured
+            .given()
+            .header("ServiceAuthorization", authorisation)
+            .contentType("application/json")
+            .body(json)
+            .when()
+            .post(callbackUrl)
+            .then()
+            .statusCode(HttpStatus.OK.value());
     }
 
-    protected String uploadCaseDocuments(String fileName, SscsCaseDetails caseDetails) throws IOException {
+    String createTestData(String fileName) throws IOException {
+        SscsCaseDetails caseDetails = createDigitalCaseWithEvent(VALID_APPEAL_CREATED);
+
+        return uploadCaseDocuments(fileName, caseDetails);
+    }
+
+    String uploadCaseDocuments(String fileName, SscsCaseDetails caseDetails) throws IOException {
         String json = getJson(fileName);
         json = json.replace("CASE_ID_TO_BE_REPLACED", String.valueOf(caseDetails.getId()));
         json = json.replace("CREATED_IN_GAPS_FROM", State.READY_TO_LIST.getId());
@@ -191,15 +226,15 @@ public abstract class AbstractFunctionalTest {
         updateCaseEvent(UPLOAD_DOCUMENT, caseDetails);
     }
 
-    protected String uploadCaseDocument(String name, String type, String json) throws IOException {
+    String uploadCaseDocument(String name, String type, String json) throws IOException {
         UploadResponse upload = uploadDocToDocMgmtStore(name);
 
-        String location = upload.getDocuments().get(0).links.self.href;
+        String location = upload.getDocuments().getFirst().links.self.href;
         log.info("Document created {} for {}", location, name);
         json = json.replace(type + "_PLACEHOLDER", location);
         json = json.replace(type + "_BINARY_PLACEHOLDER", location + "/binary");
 
-        String hash = upload.getDocuments().get(0).hashToken;
+        String hash = upload.getDocuments().getFirst().hashToken;
         return json.replace(type + "_HASH_PLACEHOLDER", hash);
     }
 
@@ -215,12 +250,10 @@ public abstract class AbstractFunctionalTest {
 
         idamTokens = idamService.getIdamTokens();
 
-        UploadResponse upload = evidenceManagementSecureDocStoreService.upload(singletonList(file), idamTokens);
-
-        return upload;
+        return evidenceManagementSecureDocStoreService.upload(singletonList(file), idamTokens);
     }
 
-    protected ConditionFactory defaultAwait() {
+    ConditionFactory defaultAwait() {
         return await()
             .atMost(15, SECONDS)
             .pollInterval(2, SECONDS);
