@@ -7,28 +7,51 @@ import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.VALID_APPEAL_CREATED
 
 import java.time.LocalDate;
 import java.util.List;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Benefit;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocument;
 import uk.gov.hmcts.reform.sscs.ccd.domain.State;
+import uk.gov.hmcts.reform.sscs.functional.utilities.idam.model.User;
 
-public class EvidenceShareFunctionalTest extends AbstractFunctionalTest {
+class EvidenceShareFunctionalTest extends AbstractFunctionalTest {
 
     public EvidenceShareFunctionalTest() {
         super();
     }
 
     @BeforeEach
-    public void beforeEach() {
+    void beforeEach() {
         ccdCaseId = null;
     }
 
+    // Toggle off scenario
     @Test
-    public void processANonDigitalAppealWithValidMrn_shouldGenerateADl6AndAddToCcdAndUpdateState() throws Exception {
+    void processANonDigitalAppealWithValidMrn_shouldGenerateADl6AndAddToCcdAndUpdateState() throws Exception {
 
-        createNonDigitalCaseWithEvent(CREATE_TEST_CASE);
+        User user = getAccess().withUser(User.builder()
+            .email("system.update.stuart.16@hmcts.net")
+            .forename("Service")
+            .surname("Account")
+            .roles(List.of(
+                "caseworker",
+                "caseworker-sscs",
+                "caseworker-sscs-superuser",
+                "caseworker-sscs-clerk",
+                "caseworker-sscs-systemupdate",
+                "caseworker-sscs-judge",
+                "caseworker-sscs-dwpresponsewriter",
+                "caseworker-sscs-registrar",
+                "caseworker-caa"))
+            .build());
+
+
+        // Use the use in the following method
+
+        createNonDigitalCaseWithEvent(CREATE_TEST_CASE, Benefit.CHILD_SUPPORT, State.VALID_APPEAL, user.tokens());
+//        createNonDigitalCaseWithEvent(CREATE_TEST_CASE);
 
         String json = getJson(VALID_APPEAL_CREATED.getCcdType());
         json = json.replace("CASE_ID_TO_BE_REPLACED", ccdCaseId);
@@ -36,7 +59,7 @@ public class EvidenceShareFunctionalTest extends AbstractFunctionalTest {
         json = json.replace("CREATED_IN_GAPS_FROM", State.VALID_APPEAL.getId());
         json = json.replaceAll("NINO_TO_BE_REPLACED", getRandomNino());
 
-        simulateCcdCallback(json);
+        simulateCcdCallback(json, user.tokens().getServiceAuthorization());
 
         defaultAwait().untilAsserted(() -> {
             SscsCaseDetails caseDetails = findCaseById(ccdCaseId);
@@ -46,7 +69,7 @@ public class EvidenceShareFunctionalTest extends AbstractFunctionalTest {
             List<SscsDocument> docs = caseData.getSscsDocument();
             assertNotNull(docs);
             assertEquals(1, docs.size());
-            assertEquals("dl6-" + ccdCaseId + ".pdf", docs.get(0).getValue().getDocumentFileName());
+            assertEquals("dl6-" + ccdCaseId + ".pdf", docs.getFirst().getValue().getDocumentFileName());
             assertEquals("withDwp", caseDetails.getState());
             assertEquals(LocalDate.now().toString(), caseData.getDateSentToDwp());
             //since the SUBMITTED callback no longer contains the updated caseData, the dateCaseSentToGaps will not be present
@@ -54,77 +77,4 @@ public class EvidenceShareFunctionalTest extends AbstractFunctionalTest {
         });
     }
 
-    @Test
-    public void processANonDigitalAppealWithNoValidMrnDate_shouldNotBeSentToDwpAndShouldBeUpdatedToFlagError() throws Exception {
-
-        createNonDigitalCaseWithEvent(CREATE_TEST_CASE);
-
-        String json = getJson(VALID_APPEAL_CREATED.getCcdType());
-        json = json.replace("CASE_ID_TO_BE_REPLACED", ccdCaseId);
-        json = json.replace("MRN_DATE_TO_BE_REPLACED", "");
-        json = json.replace("CREATED_IN_GAPS_FROM", State.VALID_APPEAL.getId());
-        json = json.replaceAll("NINO_TO_BE_REPLACED", getRandomNino());
-
-        simulateCcdCallback(json);
-
-        defaultAwait().untilAsserted(() -> {
-            SscsCaseDetails caseDetails = findCaseById(ccdCaseId);
-
-            assertNull(caseDetails.getData().getSscsDocument());
-            assertEquals("validAppeal", caseDetails.getState());
-            assertThat(caseDetails.getData().getHmctsDwpState())
-                .containsAnyOf("failedSending", "failedRobotics");
-        });
-    }
-
-    @Test
-    public void processAnAppealWithLateMrn_shouldGenerateADl16AndAddToCcdAndUpdateState() throws Exception {
-        createNonDigitalCaseWithEvent(CREATE_TEST_CASE);
-
-        String json = getJson(VALID_APPEAL_CREATED.getCcdType());
-        json = json.replace("CASE_ID_TO_BE_REPLACED", ccdCaseId);
-        json = json.replace("MRN_DATE_TO_BE_REPLACED", LocalDate.now().minusDays(31).toString());
-        json = json.replace("CREATED_IN_GAPS_FROM", State.VALID_APPEAL.getId());
-        json = json.replaceAll("NINO_TO_BE_REPLACED", getRandomNino());
-
-        simulateCcdCallback(json);
-
-        defaultAwait().untilAsserted(() -> {
-            SscsCaseDetails caseDetails = findCaseById(ccdCaseId);
-            SscsCaseData caseData = caseDetails.getData();
-
-            List<SscsDocument> docs = caseData.getSscsDocument();
-
-            assertNotNull(docs);
-            assertEquals(1, docs.size());
-            assertEquals("dl16-" + ccdCaseId + ".pdf", docs.get(0).getValue().getDocumentFileName());
-            assertEquals("withDwp", caseDetails.getState());
-            assertEquals(LocalDate.now().toString(), caseData.getDateSentToDwp());
-        });
-    }
-
-    @Test
-    public void processADigitalAppealWithValidMrn_shouldSendToWithDwpState() throws Exception {
-
-        createDigitalCaseWithEvent(CREATE_TEST_CASE);
-
-        String json = getJson(VALID_APPEAL_CREATED.getCcdType());
-        json = json.replace("CASE_ID_TO_BE_REPLACED", ccdCaseId);
-        json = json.replace("MRN_DATE_TO_BE_REPLACED", LocalDate.now().toString());
-        json = json.replace("CREATED_IN_GAPS_FROM", State.READY_TO_LIST.getId());
-        json = json.replaceAll("NINO_TO_BE_REPLACED", getRandomNino());
-
-        simulateCcdCallback(json);
-
-        defaultAwait().untilAsserted(() -> {
-            SscsCaseDetails caseDetails = findCaseById(ccdCaseId);
-
-            SscsCaseData caseData = caseDetails.getData();
-
-            assertNull(caseData.getSscsDocument());
-            assertEquals("withDwp", caseDetails.getState());
-            assertEquals(LocalDate.now().toString(), caseData.getDateSentToDwp());
-            assertNull(caseData.getDateCaseSentToGaps());
-        });
-    }
 }
